# tbr

./: .editorconfig  .gitignore  Makefile  README.md  main.py  pyproject.toml
src/tbr/: tbr.py
src/tbr/data/: tbr.conf
src/tbr/db/: db.py
src/tbr/locales/en_US/LC_MESSAGES/: messages.po
src/tbr/locales/fr_FR/LC_MESSAGES/: messages.po
src/tbr/utils/: status.py
