[project]
name = "tbr"
version = "0.0.1"
description = "tbr is an app to read the BIble from your terminal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "iniconfig>=2.1.0",
]

[dependency-groups]
dev = []

[project.scripts]
tbr = "tbr.tbr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tbr"]
package-data = { "tbr" = ["data/*", "locales/**/*"] }
